<resources>
    <string name="app_name">made</string>

    <!-- Forms -->
    <string name="password_hint">Sua senha</string>
    <string name="example_email">seuemail@exemplo.com</string>
    <string name="bt_login_text">Login</string>
    <string name="bt_logout_text">Sair</string>
    <string name="bt_checkout">Checkout</string>

    <!-- Messages -->
    <string name="app_welcome_message">A primeira solução completa de self-checkout do Brasil</string>
    <string name="login_failed_message">O login falhou. Tente novamente.</string>
    <string name="login_form_empty">Os campos email e password são obrigatórios.</string>
    <string name="dialog_confirm_start_store_title">Atenção! O modo Quiosque será ativado!</string>
    <string name="dialog_confirm_start_store_message">Ao abrir uma das lojas no modo Quiosque as
        interfaces padrões como o botão home e o botão voltar serão desabilitados. Para sair do
    modo Quiosque toque o canto superior direito da tela duas vezes.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="kiosk_welcome_message">Utilize o leitor de código de barras para adicionar
    produtos ao carrinho :)</string>
    <string name="kiosk_loading_inventory_message">Abastacendo sua loja :)</string>
    <string name="kiosk_loading_catalog_message">Sincronizando o catálogo</string>
    <string name="barcode_product_not_found">Produto com código %1$s não foi encontrado</string>
    <string name="barcode_instructions">Enquadre o código de barras na visualização acima e aguarde o beep.</string>

    <string name="cart_product_removed_successfully">%1$s removido do carrinho</string>
    <string name="cart_product_added_successfully">%1$s adicionado ao carrinho</string>
    <string name="cart_product_not_in_cart">Ops! %1$s não está no seu carrinho.</string>

    <string name="pinpad_welcome">Vamos conectar um pinpad para concretizar suas vendas.</string>
    <string name="pinpad_instructions">Clique em um dos dispositivos encontrados abaixo para iniciar.
    Caso o seu pinpad não se encontre na lista confirme que você o conectou através das
    configurações bluetooth do seu aparelho.</string>

    <!-- Interface -->
    <string name="hello_text">Olá %1$s</string>
    <string name="store_list_loading">Carregando suas lojas</string>
    <string name="store_list_title">Toque em uma de suas lojas para começar a vender</string>
    <string name="title_activity_kiosk_tabbed">KioskTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
